--- a/public/view/index.html
+++ b/public/view/index.html
@@ -13,7 +13,6 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-    <meta name="google-site-verification" content="NMNRE8QlDFmRd0I0WIY4eVyfE7SohaXJxJ73oGc-8fo" />
 	</head>
 	<body id="top">
 
@@ -22,17 +21,18 @@
 				<div class="content">
 					<h1><a href="#">Vysor</a></h1>
 					<p>A window to your Android</p>
+					<h5 class='instructions'>Someone is trying to share their Android screen with you.</h5>
+					<h5 class='instructions2'>Download the Chrome app and refresh this page to connect.</h5>
 					<ul class="actions">
 						<li><a href="https://chrome.google.com/webstore/detail/vysor-beta/gidgenkbbabolejbgbpnhbimgjbffefm?authuser=1" class="button special icon fa-download">Download</a></li>
-            <li><a href="https://www.youtube.com/watch?v=ACRt6SHWaJU" class="button icon scrolly popup-youtube">Watch the Video</a></li>
-            <li><a href="#one" class="button icon fa-chevron-down scrolly">Learn More</a></li>
+            <!-- <li><a href="#one" class="button icon fa-chevron-down scrolly">Learn More</a></li> -->
 					</ul>
 				</div>
 				<div class="image phone"><div class="inner"><img src="images/screen.png" alt="" /></div></div>
 			</header>
 
 		<!-- One -->
-      <section id="one" class="wrapper style2 special">
+      <!-- <section id="one" class="wrapper style2 special">
         <header class="major">
           <h2>Sed ipsum magna lorem tempus amet<br />
           vehicula et gravida elementum</h2>
@@ -42,7 +42,7 @@
           <li><span class="icon fa-refresh"><span class="label">Process</span></span></li>
           <li><span class="icon fa-cloud"><span class="label">Upload</span></span></li>
         </ul>
-      </section>
+      </section> -->
 
 		<!-- Two -->
       <!-- <section id="two" class="wrapper">
@@ -431,21 +431,23 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
-      <script src="magnific-dist/jquery.magnific-popup.min.js"></script>
-  		<link rel="stylesheet" href="magnific-dist/magnific-popup.css" />
-
+    
       <script>
-      $(document).ready(function() {
-           $('.popup-youtube, .popup-vimeo, .popup-gmaps').magnificPopup({
-               disableOn: 700,
-               type: 'iframe',
-               mainClass: 'mfp-fade',
-               removalDelay: 160,
-               preloader: false,
+        $(document).ready(function() {
+          if (window.location.toString().indexOf('redirect') != -1) {
+            // after a second, redirect to trigger vysor
+            setTimeout(function() {
+              window.location = window.location.toString().replace('/redirect/', '/view/');
 
-               fixedContentPos: false
-           });
-       });
+              // still here? vysor is installed!
+              setTimeout(function() {
+                $('.actions').hide();
+                $('.instructions').text('Connecting to a shared Android device.');
+                $('.instructions2').text('Vysor will open automatically.');
+              }, 1000);
+            }, 1000)
+          }
+        })
       </script>
 
 	</body>
