--- a/public/view/index.html
+++ b/public/view/index.html
@@ -22,9 +22,9 @@
 					<h1><a href="#">Vysor</a></h1>
 					<p>A window to your Android</p>
 					<h5 class='instructions'>Someone is trying to share their Android screen with you.</h5>
-					<h5 class='instructions2'>Download the Chrome app and refresh this page to connect.</h5>
+					<h5 class='instructions2'>Open this link in Chrome or download the Chrome app to connect.</h5>
 					<ul class="actions">
-						<li><a href="https://chrome.google.com/webstore/detail/vysor-beta/gidgenkbbabolejbgbpnhbimgjbffefm?authuser=1" class="button special icon fa-download">Download</a></li>
+						<li><a href="https://chrome.google.com/webstore/detail/vysor-beta/gidgenkbbabolejbgbpnhbimgjbffefm?authuser=1" class="button special icon fa-download">Download Vysor</a></li>
             <!-- <li><a href="#one" class="button icon fa-chevron-down scrolly">Learn More</a></li> -->
 					</ul>
 				</div>
