--- a/public/app/list.css
+++ b/public/app/list.css
@@ -29,7 +29,7 @@ body {
   padding-left: 16px;
 }
 
-.checkbox input[type=checkbox] {
+.main-settings .checkbox input[type=checkbox] {
   margin-left: 0px;
 }
 
