--- a/public/view/index.html
+++ b/public/view/index.html
@@ -65,7 +65,7 @@
 					var customProtocol = 'ec-gidgenkbbabolejbgbpnhbimgjbffefm';
 					var customLocation = newLocation.replace(/^https/, customProtocol).replace(/^http/, customProtocol);
 					protocolCheck(customLocation, function() {
-						window.location = 'https://home.koushikdutta.com/#/deeplink/' + encodeURIComponent(window.location.href);
+						window.location = 'https://app.vysor.io/#/deeplink/' + encodeURIComponent(window.location.href);
 					})
 
 					// still here? vysor is installed!
